--- a/src/common/LockPanel/LockPanel.module.scss
+++ b/src/common/LockPanel/LockPanel.module.scss
@@ -56,6 +56,11 @@
   align-items: center;
   width: 280px;
   height: 60px;
+
+  &_blur {
+    animation: blur 2.5s forwards;
+    opacity: 0;
+  }
 }
 
 .dragButton {
@@ -102,7 +107,6 @@
     rgb(255, 255, 255) 33%,
     rgba(255, 255, 255, 0) 0%
   );
-  background-position: bottom;
   background-size: 10px 1px;
   background-repeat: repeat-x;
 }
@@ -112,4 +116,13 @@
   height: 60px;
   border: 2px solid #fff;
   border-radius: 50%;
+}
+
+@keyframes blur {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
