--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -61,3 +61,204 @@
     opacity: 1;
   }
 }
+
+.guests {
+  min-height: 750px;
+  display: flex;
+  background: #1b1b1b;
+  color: #b7b7b7;
+
+  @include breakpoints.customScreenWidth(1005px) {
+    flex-wrap: wrap;
+  }
+
+  @include breakpoints.customScreenWidth(620px) {
+    min-height: 550px;
+  }
+}
+
+.textContent {
+  flex-basis: 50%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+  padding: 80px;
+  padding-top: 150px;
+  font-weight: 300;
+
+  @include breakpoints.customScreenWidth(1005px) {
+    flex-basis: 100%;
+    align-items: center;
+    padding: 80px;
+    gap: 30px;
+  }
+
+  @include breakpoints.customScreenWidth(620px) {
+    padding: 40px;
+    gap: 20px;
+  }
+
+  @include breakpoints.customScreenWidth(375px) {
+    padding: 20px;
+  }
+}
+
+.photoContent {
+  position: relative;
+  flex-basis: 50%;
+  padding: 80px;
+
+  @include breakpoints.customScreenWidth(1005px) {
+    flex-basis: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+  }
+
+  @include breakpoints.customScreenWidth(620px) {
+    padding: 15px;
+  }
+}
+
+.guestName,
+.date {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
+  font-size: 48px;
+  white-space: nowrap;
+
+  @include breakpoints.customScreenWidth(620px) {
+    font-size: 30px;
+  }
+
+  @include breakpoints.customScreenWidth(375px) {
+    font-size: 26px;
+  }
+}
+
+.guestText,
+.linkForm {
+  font-family: "Сleanvertising";
+
+  font-size: 18px;
+
+  @include breakpoints.customScreenWidth(375px) {
+    text-align: center;
+    font-size: 14px;
+  }
+}
+
+.guestText {
+  @include breakpoints.customScreenWidth(1005px) {
+    padding: 0 50px;
+  }
+
+  @include breakpoints.customScreenWidth(620px) {
+    padding: 0 20px;
+  }
+}
+
+.linkForm {
+  display: inline-block;
+  margin-top: auto;
+  width: 220px;
+  vertical-align: top;
+  text-align: center;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+  transition: background 0.3s linear;
+  cursor: pointer;
+  background-color: #e1d2d2;
+  border-radius: 5px;
+
+  &:hover {
+    background-color: #c5bbbb;
+  }
+}
+
+.photo1 {
+  position: absolute;
+  top: 130px;
+  right: 375px;
+  display: block;
+  width: 350px;
+  height: auto;
+  object-fit: cover;
+  transform: rotate(10deg);
+
+  transition: transform 0.5s linear;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+
+  @include breakpoints.laptopScreen {
+    top: 160px;
+    right: 305px;
+    width: 300px;
+  }
+
+  @include breakpoints.customScreenWidth(1232px) {
+    top: 250px;
+    right: 240px;
+    width: 250px;
+  }
+
+  @include breakpoints.customScreenWidth(1005px) {
+    position: static;
+  }
+
+  @include breakpoints.customScreenWidth(620px) {
+    width: 150px;
+  }
+
+  @include breakpoints.customScreenWidth(375px) {
+    width: 120px;
+  }
+}
+
+.photo2Wrapper {
+  position: absolute;
+  top: 100px;
+  right: 60px;
+  object-fit: fill;
+  overflow: hidden;
+  transform: rotate(-5deg);
+  transition: transform 0.5s linear;
+
+  &:hover {
+    transform: rotate(-5deg) scale(1.2);
+  }
+
+  @include breakpoints.customScreenWidth(1005px) {
+    position: static;
+  }
+}
+
+.photo2 {
+  display: block;
+  width: 300px;
+  height: auto;
+
+  transform: scale(1.1);
+
+  @include breakpoints.laptopScreen {
+    width: 250px;
+  }
+
+  @include breakpoints.customScreenWidth(1232px) {
+    width: 220px;
+  }
+
+  @include breakpoints.customScreenWidth(620px) {
+    width: 180px;
+  }
+
+  @include breakpoints.customScreenWidth(375px) {
+    width: 120px;
+  }
+}
