--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,21 @@
   font-weight: 300;
 }
 
+@font-face {
+  font-family: "Karlotte";
+  src: url("assets/fonts/karlotte.ttf");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Lovers Quarrel";
+  src: url("assets/fonts/lovers_quarrel.woff2") format("woff2"),
+    url("assets/fonts/lovers_quarrel.woff") format("woff");
+  font-style: italic;
+  font-weight: 300;
+}
+
 * {
   box-sizing: border-box;
 }
