--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -281,18 +281,29 @@
   gap: 70px;
 }
 
-.locationTitleWrapper {
+.titleWrapper {
   position: relative;
   padding: 30px 0;
 }
 
-.locationTitle {
+.title {
   font-family: "Karlotte";
   font-size: 62px;
   text-transform: uppercase;
+
+  &_left {
+    position: relative;
+    right: 56px;
+  }
+
+  &_break {
+    position: absolute;
+    top: 72px;
+    left: 59px;
+  }
 }
 
-.locationSubtitle {
+.subtitle {
   position: absolute;
   top: 56px;
   right: 64px;
@@ -300,12 +311,22 @@
   font-family: "Lovers Quarrel";
   font-style: italic;
   font-size: 84px;
-  color: #c5c1bcc7;
+  color: #cac5c2;
 
   transform: rotate(-4deg);
+
+  &_right {
+    top: 60px;
+    right: 0px;
+  }
+
+  &_top {
+    top: -32px;
+    left: -26px;
+  }
 }
 
-.photo3Wrapper {
+.rotatePhoto {
   position: relative;
 
   transform: rotate(-8deg);
@@ -318,7 +339,7 @@
     width: 290px;
     height: 100%;
 
-    background: #c5c1bc93;
+    background: #cac5c2;
     transform: rotate(-8deg);
     border-radius: 10px;
     transition: transform 0.5s linear;
@@ -353,6 +374,7 @@
   flex-direction: column;
   gap: 15px;
   text-align: center;
+  padding: 0 10px;
 }
 
 .locationLink {
@@ -364,4 +386,96 @@
   &:focus {
     outline: none;
   }
+}
+
+.timing {
+  min-height: 750px;
+  height: 100%;
+  background: #e1d2d2;
+  color: #000000;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.timingPointWrapper {
+  padding: 10px 0;
+
+  color: #000000;
+  font-family: "Karlotte";
+  text-align: center;
+}
+
+.timingPoint {
+  position: relative;
+  font-size: 62px;
+  padding-top: 100px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 2px;
+    height: 80px;
+    background-color: #000000;
+  }
+}
+
+.timingPointCaption {
+  position: relative;
+
+  font-size: 20px;
+
+  &_last {
+    padding-bottom: 100px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 2px;
+      height: 80px;
+      background-color: #000000;
+    }
+  }
+}
+
+.dressCode {
+  min-height: 750px;
+  height: 100%;
+  background: #e1d2d2;
+  color: #000000;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  padding-bottom: 50px;
+}
+
+.dressCodeText {
+  max-width: 320px;
+  padding-top: 10px;
+
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  text-align: center;
+}
+
+.dressCodeColors {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding-bottom: 50px;
+}
+
+.dressCodeExample {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
