--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -178,6 +178,7 @@
   cursor: pointer;
   background-color: #e1d2d2;
   border-radius: 5px;
+  border: none;
 
   &:hover {
     background-color: #c5bbbb;
@@ -457,6 +458,7 @@
   gap: 20px;
 
   padding-bottom: 50px;
+  overflow: hidden;
 }
 
 .dressCodeText {
@@ -493,6 +495,6 @@
     display: none;
   }
 }
-.test html body {
-  opacity: 0 !important;
+.test {
+  overflow: hidden;
 }
