--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -174,6 +174,7 @@
   padding: 10px 15px;
   text-decoration: none;
   color: #333;
+  font-weight: 500;
   transition: background 0.3s linear;
   cursor: pointer;
   background-color: #e1d2d2;
@@ -182,6 +183,18 @@
 
   &:hover {
     background-color: #c5bbbb;
+  }
+
+  &_submit {
+    margin: auto;
+    padding-top: 10px;
+    width: 150px;
+    color: #c5bbbb;
+    background: #1b1b1b;
+
+    &:hover {
+      background-color: #3d3c3c;
+    }
   }
 }
 
@@ -488,13 +501,196 @@
   text-align: center;
 }
 
-.test {
-  background: #e1d2d2;
+.form {
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  flex-direction: column;
 
-  & > html {
-    display: none;
+  gap: 10px;
+
+  max-width: 450px;
+  padding: 0 5px;
+}
+
+.formNameWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.formBlockTitle {
+  position: relative;
+  font-weight: 600;
+  font-size: 18px;
+  color: #000000;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+.formBlockCaption {
+  font-size: 12px;
+  padding: 5px;
+}
+
+.formNameInput {
+  display: block;
+  width: 100%;
+
+  font-family: inherit;
+  font-size: 14px;
+  color: #000000;
+
+  background-color: inherit;
+  border: none;
+  border-bottom: 1px solid #b9b9b9;
+  border-radius: 0;
+  box-shadow: none;
+
+  &::placeholder {
+    color: #8c8986;
+  }
+
+  &:focus + .formNameInput__line {
+    width: 100%;
+  }
+
+  &__line {
+    width: 0;
+    height: 1px;
+
+    background-color: #000000;
+
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+
+    transition: width 0.4s linear;
   }
 }
-.test {
-  overflow: hidden;
+
+.formBlockWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+  padding: 15px 0;
+}
+
+.radioBox {
+  display: flex;
+  align-items: center;
+
+  &__input {
+    display: none;
+  }
+
+  &__fake {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+
+    margin-right: 5px;
+
+    position: relative;
+
+    border: 1px solid #000000;
+    background-color: inherit;
+    border-radius: 50%;
+
+    &::before {
+      content: "";
+      display: block;
+
+      position: absolute;
+      top: 50%;
+      left: 50%;
+
+      width: 8px;
+      height: 8px;
+
+      background: #000000;
+      border-radius: 50%;
+
+      transform: translate(-50%, -50%);
+
+      opacity: 0;
+
+      transition: 0.1s ease-in-out;
+    }
+  }
+
+  &__input:checked + .radioBox__fake::before {
+    opacity: 1;
+  }
+
+  &__input:checked + .radioBox__fake {
+    border: 1px solid black;
+  }
+
+  &__text {
+    font-weight: 500;
+    font-size: 14px;
+    color: #000000;
+  }
+}
+
+.checkBox {
+  display: flex;
+  align-items: center;
+
+  &__input {
+    display: none;
+  }
+
+  &__fake {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+
+    margin-right: 5px;
+
+    position: relative;
+
+    border: 1px solid #000000;
+    background-color: inherit;
+    border-radius: 4px;
+
+    &::before {
+      content: "";
+      display: block;
+
+      position: absolute;
+      top: 50%;
+      left: 50%;
+
+      width: 10px;
+      height: 10px;
+
+      background: url("../../assets/icons/check.svg") center no-repeat;
+      background-size: contain;
+
+      transform: translate(-50%, -50%);
+
+      opacity: 0;
+
+      transition: 0.1s ease-in-out;
+    }
+  }
+
+  &__input:checked + .checkBox__fake::before {
+    opacity: 1;
+  }
+
+  &__input:checked + .checkBox__fake {
+    border: 1px solid #000000;
+  }
+
+  &__text {
+    font-weight: 500;
+    font-size: 14px;
+    color: #000000;
+  }
 }
