added song fix form

--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -207,6 +207,7 @@
   height: auto;
   object-fit: cover;
   transform: rotate(10deg);
+  user-select: none;
 
   transition: transform 0.5s linear;
 
@@ -261,6 +262,7 @@
   display: block;
   width: 300px;
   height: auto;
+  user-select: none;
 
   transform: scale(1.1);
 
@@ -377,6 +379,7 @@
   width: 280px;
   border-radius: 10px;
   transition: transform 0.5s linear;
+  user-select: none;
 
   @include breakpoints.mobileLargeScreen {
     width: 220px;
@@ -509,7 +512,11 @@
   gap: 10px;
 
   max-width: 450px;
-  padding: 0 5px;
+  padding: 0px 15px;
+
+  &_loading {
+    filter: blur(2px);
+  }
 }
 
 .formNameWrapper {
