--- a/src/common/LockPanel/LockPanel.module.scss
+++ b/src/common/LockPanel/LockPanel.module.scss
@@ -43,6 +43,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 16px;
+  user-select: none;
 
   @include breakpoints.mobileLargeScreen {
     font-size: 12px;
